--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,15 @@
+buildscript {
+	ext {
+		restdocsApiSpecVersion = '0.16.4' // restdocsApiSpecVersion 버전 변수 설정
+	}
+}
+
 plugins {
 	id 'java'
 	id 'org.springframework.boot' version '2.7.0'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+	id 'com.epages.restdocs-api-spec' version "${restdocsApiSpecVersion}"
+	id 'org.hidetake.swagger.generator' version '2.18.2'
 }
 
 group = 'com.rmsoft'
@@ -33,6 +41,12 @@ dependencies {
 
 	implementation 'org.mindrot:jbcrypt:0.4'
 
+	//spring rest docs
+	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
+	//restdocs-api-spec 의존성 추가
+	testImplementation 'com.epages:restdocs-api-spec-mockmvc:' + restdocsApiSpecVersion
+	implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
+
 }
 
 tasks.named('bootBuildImage') {
@@ -45,4 +59,35 @@ tasks.named('test') {
 
 jar {
 	enabled = false
+}
+
+// Task 및 설정 추가
+// GenerateSwaggerUI 태스크가, openapi3 task 를 의존하도록 설정
+tasks.withType(GenerateSwaggerUI) {
+	dependsOn 'openapi3'
+
+	//기존 파일 삭제했다가, build 에 출력한 json 정적파일 복사 (안해도 됨 → local 확인용)
+	delete file('src/main/resources/static/docs/')
+	copy {
+		from "build/resources/main/static/docs"
+		into "src/main/resources/static/docs/"
+
+	}
+}
+
+//openAPI 작성 자동화를 위해 패키징 전에 openapi3 테스크 선실행을 유발
+bootJar{
+	dependsOn(':openapi3')
+}
+
+openapi3 {
+	server = "http://localhost:8080"
+	title = "Book Manage Service API"
+	description = "도서관리 서비스 API 문서입니다."
+	version = "0.0.1"
+	outputFileNamePrefix = 'open-api-3.0.1'
+	format = 'json'
+
+	// /static/docs/open-api-3.0.1.json 생성 → jar 파일만 배포할 예정이기에 build 에 출력
+	outputDirectory = 'build/resources/main/static/docs'
 }
